<?xml version="1.0"?>
<package format="2">
  <name>pepperl_fuchs_smartrunner</name>
  <version>0.3.0</version>
  <description>The Pepperl+Fuchs SmartRunner driver package</description>
  <maintainer email="git@breeze-innovations.com">AK</maintainer>
  <maintainer email="opensource-jhe@de.pepperl-fuchs.com">Jan Hegner</maintainer>
  <author email="git@breeze-innovations.com">AK</author>
  <license>Apache-2.0</license>
  <url type="repository">https://github.com/PepperlFuchs/pf_smartrunner_ros_driver</url>
 
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
